# OpenCADStudio

./: .gitignore  COMMANDS.md  Cargo.toml  ROADMAP.md
.github/workflows/: pages.yml  release.yml
examples/: inspect_viewports.rs
packaging/windows/: main.wxs
src/: lib.rs  linetypes.rs  main.rs  par.rs
src/app/: commands.rs  helpers.rs  history.rs  mod.rs  properties.rs  update.rs  view.rs
src/entities/: dimension.rs  hatch.rs  insert.rs  lwpolyline.rs  ole2frame.rs  table.rs  traits.rs  viewport.rs
src/io/: file_association.rs  mod.rs  plot_style.rs  xref.rs
src/modules/annotate/: dim_baseline.rs
src/modules/draw/modify/: refedit.rs  torient.rs
src/modules/home/modify/: explode.rs  refedit.rs  trim.rs
src/modules/storm_sewer/: structures.rs
src/modules/view/: hidden.rs  orbit.rs  ortho.rs  pan.rs  persp.rs  solid.rs  view_front.rs  view_iso.rs  view_right.rs  view_top.rs  wireframe.rs  xray.rs  zoom_ext.rs  zoom_in.rs  zoom_out.rs
src/scene/: block_cache.rs  complex_lt.rs  hit_test.rs  lff.rs  mod.rs  paper_canvas.rs  quadtree.rs  render.rs  solid3d_tess.rs  tess_util.rs  tessellate.rs  viewport_pane.rs
src/scene/cache/: block_cache.rs
src/scene/pipeline/: face3d_gpu.rs  mod.rs  wire_gpu.rs
src/snap/: mod.rs
src/ui/: color_select.rs  cycle_popup.rs  dimstyle.rs  mleaderstyle.rs  properties.rs  selection_filter_popup.rs  shortcuts.rs  statusbar.rs  statusbar_config.rs  style_list.rs  style_manager.rs  tablestyle.rs
src/ui/ribbon/: mod.rs  widgets.rs
